@@ -22,11 +22,6 @@ override_dh_auto_configure:
 	--enable-all-experimental-features
 
 override_dh_install:
-	mkdir -p $(CURDIR)/debian/tmp/$(APIDOCDIR)/sssd.api.d/
-	install -D -m640 $(CURDIR)/src/config/etc/sssd.api.conf \
-		$(CURDIR)/debian/tmp/$(APIDOCDIR)/sssd.api.conf
-	install -m640 $(CURDIR)/src/config/etc/sssd.api.d/* \
-		$(CURDIR)/debian/tmp/$(APIDOCDIR)/sssd.api.d/
 	install -D -m755 $(CURDIR)/debian/generate-config \
 		$(CURDIR)/debian/tmp/usr/lib/sssd/generate-config
 
