@@ -7,6 +7,8 @@ sssd (1.8.0~beta3-1) UNRELEASED; urgency=low
     - enable all experimental features
   * Drop fix-python-api-path.patch, included upstream.
   * sssd.examples: Install the renamed example config.
+  * rules: Drop special handling of the sssd.api.d, upstream uses
+    the proper path now.
 
  -- Timo Aaltonen <tjaalton@ubuntu.com>  Thu, 16 Feb 2012 10:24:46 +0200
 
